files has been changed

--- a/templates/serviceaccount.yaml
+++ b/templates/serviceaccount.yaml
@@ -1,14 +1,10 @@
-{{- if .Values.serviceAccount.create -}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "eks-cluster-autoscaler.serviceAccountName" . }}
-  namespace: {{ .Values.autoscaling.namespace }}
   labels:
-    {{- include "eks-cluster-autoscaler.labels" . | nindent 4 }}
-  {{- with .Values.serviceAccount.annotations }}
+    k8s-addon: cluster-autoscaler.addons.k8s.io
+    k8s-app: cluster-autoscaler
   annotations:
-    {{- toYaml . | nindent 4 }}
-  {{- end }}
-automountServiceAccountToken: {{ .Values.serviceAccount.automount }}
-{{- end }}
+    eks.amazonaws.com/role-arn: "${role}"
+  name: cluster-autoscaler
+  namespace: {{.Values.autoscaling.namespace}}
