--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -1,56 +1,50 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "eks-cluster-autoscaler.fullname" . }}
+  name: cluster-autoscaler
   namespace: {{ .Values.autoscaling.namespace }}
   labels:
-    {{- include "eks-cluster-autoscaler.labels" . | nindent 4 }}
+    app: cluster-autoscaler
 spec:
-  replicas: {{ .Values.replicaCount }}
+  replicas: 1
   selector:
     matchLabels:
-      {{- include "eks-cluster-autoscaler.selectorLabels" . | nindent 6 }}
+      app: cluster-autoscaler
   template:
     metadata:
       labels:
-        {{- include "eks-cluster-autoscaler.selectorLabels" . | nindent 8 }}
+        app: cluster-autoscaler
       annotations:
-        {{- toYaml .Values.podAnnotations | nindent 8 }}
+        cluster-autoscaler.kubernetes.io/safe-to-evict: 'false'
     spec:
-      serviceAccountName: {{ include "eks-cluster-autoscaler.serviceAccountName" . }}  # Corrected field name
-      imagePullSecrets:
-        - name: {{ .Release.Name }}-docker-secret  # Use your Docker image pull secret here
-         command:
-            - /cluster-autoscaler
-          args:
-             -namespace={{ .Values.autoscaling.namespace }}
-             -cloud-provider=aws
+      serviceAccountName: cluster-autoscaler
       containers:
-        - name: {{ .Chart.Name }}
-          image: {{ .Values.image }}
-          imagePullPolicy: {{ .Values.pullPolicy }}
-          env:
-            - name: KAFKA_BROKER_ADDRESSES
-              valueFrom:
-                configMapKeyRef:
-                  name: {{ .Release.Name }}-kafka-config
-                  key: KAFKA_BROKER_ADDRESSES
-            - name: KAFKA_TOPIC
-              valueFrom:
-                configMapKeyRef:
-                  name: {{ .Release.Name }}-kafka-config
-                  key: KAFKA_TOPIC
+        - image: k8s.gcr.io/autoscaling/cluster-autoscaler:v1.29
+          name: cluster-autoscaler
           resources:
-            {{- toYaml .Values.resources | nindent 12 }}
-          livenessProbe:
-            httpGet:
-              path: /liveness
-              port: 8080
-            initialDelaySeconds: 15
-            periodSeconds: 20
-          readinessProbe:
-            httpGet:
-              path: /readiness
-              port: 8080
-            initialDelaySeconds: 5
-            periodSeconds: 10
+            limits:
+              cpu: 100m
+              memory: 300Mi
+            requests:
+              cpu: 100m
+              memory: 300Mi
+          # https://github.com/kubernetes/autoscaler/blob/master/cluster-autoscaler/cloudprovider/aws/README.md
+          command:
+            - ./cluster-autoscaler
+            - --v=4
+            - --stderrthreshold=info
+            - --cloud-provider=aws
+            - --skip-nodes-with-local-storage=false
+            - --expander=least-waste
+            - --node-group-auto-discovery=asg:tag=k8s.io/cluster-autoscaler/enabled,k8s.io/cluster-autoscaler/dev-cluster # Update cluster
+            - --balance-similar-node-groups
+            - --skip-nodes-with-system-pods=false
+          volumeMounts:
+            - name: ssl-certs
+              mountPath: /etc/ssl/certs/ca-certificates.crt #/etc/ssl/certs/ca-bundle.crt for Amazon Linux Worker Nodes
+              readOnly: true
+          imagePullPolicy: "Always"
+      volumes:
+        - name: ssl-certs
+          hostPath:
+            path: "/etc/ssl/certs/ca-bundle.crt
