--- a/templates/rolebiniding.yaml
+++ b/templates/rolebiniding.yaml
@@ -13,5 +13,5 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: cluster-autoscaler
-    namespace: kube-system
+    namespace: {{.Values.autoscaling.namespace }}
 
