--- a/templates/serviceaccount.yaml
+++ b/templates/serviceaccount.yaml
@@ -5,7 +5,7 @@ metadata:
     k8s-addon: cluster-autoscaler.addons.k8s.io
     k8s-app: cluster-autoscaler
   annotations:
-    eks.amazonaws.com/role-arn: "${role}"
+    eks.amazonaws.com/role-arn: {{.Values.annotations.role_arn}}
   name: cluster-autoscaler
   namespace: {{.Values.autoscaling.namespace}}
 
