feat: update jenkins

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,7 +3,7 @@ pipeline {
     environment {
         GITHUB_PAT = credentials('github_pat')
         DOCKER_CREDS = credentials('dockerhub-credentials')
-        DOCKER_REGISTRY = 'hsa404/assignments'
+        DOCKER_CONSUMER = "hsa404/eksautoscalar"
         GIT_LOCAL_BRANCH = 'main'
     }
 
@@ -68,6 +68,24 @@ pipeline {
                 }
             }
         }
+
+        stage('Build and Push Docker Image') {
+                    steps {
+                        script {
+                            withCredentials([usernamePassword(credentialsId: 'dockerhub-credentials', usernameVariable: 'DOCKER_USERNAME', passwordVariable: 'DOCKER_PASSWORD')]) {
+                                sh '''
+                                    echo "Docker Username: \$DOCKER_USERNAME"
+                                    echo "Docker Password: \$DOCKER_PASSWORD"
+                                    echo "${DOCKER_PASSWORD}" | docker login -u "${DOCKER_USERNAME}" --password-stdin
+                                '''
+                                    sh '''
+                                        docker buildx build --push --platform linux/amd64,linux/arm64 -f Dockerfile --no-cache -t ${DOCKER_CONSUMER}:${RELEASE_VERSION} -t  ${DOCKER_CONSUMER}:latest  .
+                                    '''
+                                
+                            }
+                        }
+                    }
+                }
 
         stage('Cleanup') {
             steps {
